@@ -21,7 +21,8 @@ label.dielectricConstant=Dielectric Constant:
 label.dielectricMaterial=Material:
 label.plateCharge=Plate Charge (top)
 label.none=none
-label.lots=lots
+label.lotsPositive=lots (+)
+label.lotsNegative=lots (-)
 
 material.custom=custom
 material.teflon=teflon
